# wandering-inn-stats

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  export_db_schema_dot.sh  first_href_checks.py  get.py  get.sh  get_leveling_attributes.sh  link_volumes.sh  manage.py  models.py  package-lock.json  package.json  processing.py  pyproject.toml  stylelint.config.js  text_processing.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
chapters/src/: 1-wanderinginn.com-2016-07-27-1-00.html  10-wanderinginn.com-2016-08-28-1-09.html  100-wanderinginn.com-2017-05-28-2-25.html  101-wanderinginn.com-2017-05-31-2-26.html  102-wanderinginn.com-2017-06-04-2-00-h.html  103-wanderinginn.com-2017-06-07-2-27.html  104-wanderinginn.com-2017-06-09-2-28.html  105-wanderinginn.com-2017-06-11-2-29.html  106-wanderinginn.com-2017-06-14-2-03-g.html  107-wanderinginn.com-2017-06-18-2-30.html  108-wanderinginn.com-2017-06-21-2-31.html  109-wanderinginn.com-2017-06-24-interlude-3.html  11-wanderinginn.com-2016-08-31-1-10.html  110-wanderinginn.com-2017-05-28-s02-the-antinium-wars-pt-1.html  111-wanderinginn.com-2017-05-31-s02-the-antinium-wars-pt-2.html  112-wanderinginn.com-2017-06-27-2-32.html  113-wanderinginn.com-2017-07-01-2-33.html  114-wanderinginn.com-2017-07-04-2-34.html  115-wanderinginn.com-2017-07-08-2-35.html  116-wanderinginn.com-2017-07-11-2-36.html  117-wanderinginn.com-2017-07-15-2-37.html  118-wanderinginn.com-2017-07-18-2-38.html  119-wanderinginn.com-2017-06-30-s03-wistram-days-pt-1.html  12-wanderinginn.com-2016-09-04-1-11.html  120-wanderinginn.com-2017-07-22-2-39.html  121-wanderinginn.com-2017-07-25-2-40.html  122-wanderinginn.com-2017-07-29-2-41.html  123-wanderinginn.com-2017-08-01-3-00-e.html  124-wanderinginn.com-2017-08-05-3-01-e.html  125-wanderinginn.com-2017-08-08-3-02-h.html  126-wanderinginn.com-2017-08-12-3-03.html  127-wanderinginn.com-2017-08-15-3-04.html  128-wanderinginn.com-2017-08-19-3-05-l.html  129-wanderinginn.com-2017-07-14-1-00-d.html  13-wanderinginn.com-2016-09-04-interlude.html  130-wanderinginn.com-2017-07-14-1-01-d.html  131-wanderinginn.com-2017-08-22-3-06-l.html  132-wanderinginn.com-2017-08-26-3-07-h.html  133-wanderinginn.com-2017-08-29-3-08-h.html  134-wanderinginn.com-2017-09-02-3-09.html  (+595 more)
chapters/text/: 1-wanderinginn.com-2016-07-27-1-00.txt  10-wanderinginn.com-2016-08-28-1-09.txt  100-wanderinginn.com-2017-05-28-2-25.txt  101-wanderinginn.com-2017-05-31-2-26.txt  102-wanderinginn.com-2017-06-04-2-00-h.txt  103-wanderinginn.com-2017-06-07-2-27.txt  104-wanderinginn.com-2017-06-09-2-28.txt  105-wanderinginn.com-2017-06-11-2-29.txt  106-wanderinginn.com-2017-06-14-2-03-g.txt  107-wanderinginn.com-2017-06-18-2-30.txt  108-wanderinginn.com-2017-06-21-2-31.txt  109-wanderinginn.com-2017-06-24-interlude-3.txt  11-wanderinginn.com-2016-08-31-1-10.txt  110-wanderinginn.com-2017-05-28-s02-the-antinium-wars-pt-1.txt  111-wanderinginn.com-2017-05-31-s02-the-antinium-wars-pt-2.txt  112-wanderinginn.com-2017-06-27-2-32.txt  113-wanderinginn.com-2017-07-01-2-33.txt  114-wanderinginn.com-2017-07-04-2-34.txt  115-wanderinginn.com-2017-07-08-2-35.txt  116-wanderinginn.com-2017-07-11-2-36.txt  117-wanderinginn.com-2017-07-15-2-37.txt  118-wanderinginn.com-2017-07-18-2-38.txt  119-wanderinginn.com-2017-06-30-s03-wistram-days-pt-1.txt  12-wanderinginn.com-2016-09-04-1-11.txt  120-wanderinginn.com-2017-07-22-2-39.txt  121-wanderinginn.com-2017-07-25-2-40.txt  122-wanderinginn.com-2017-07-29-2-41.txt  123-wanderinginn.com-2017-08-01-3-00-e.txt  124-wanderinginn.com-2017-08-05-3-01-e.txt  125-wanderinginn.com-2017-08-08-3-02-h.txt  126-wanderinginn.com-2017-08-12-3-03.txt  127-wanderinginn.com-2017-08-15-3-04.txt  128-wanderinginn.com-2017-08-19-3-05-l.txt  129-wanderinginn.com-2017-07-14-1-00-d.txt  13-wanderinginn.com-2016-09-04-interlude.txt  130-wanderinginn.com-2017-07-14-1-01-d.txt  131-wanderinginn.com-2017-08-22-3-06-l.txt  132-wanderinginn.com-2017-08-26-3-07-h.txt  133-wanderinginn.com-2017-08-29-3-08-h.txt  134-wanderinginn.com-2017-09-02-3-09.txt  (+595 more)
config/: README.md  disambiguation.cfg  disambiguation_exceptions.cfg
innverse/: asgi.py  context_processors.py  forms.py  settings.py  table_search.py  tables.py  urls.py  views.py  wsgi.py
innverse/core/: views.py
innverse/search/: __init__.py
innverse/templatetags/: innverse_extras.py
innverse/views/: root.py
innverse_stats/: asgi.py  settings.py  urls.py  wsgi.py
leveling_attributes_logs/: 2022-09-25.txt
missing/: missing_categories_or_messages.txt  missing_characters.txt  missing_classes.txt  missing_colors.txt  missing_skills.txt  missing_spells.txt
processing/: .gitignore  README.md  __init__.py  __main__.py  exceptions.py  get.py  get.sh  get_leveling_attributes.sh  leveling_attributes.ods  link_volumes.sh  main.py  models.py
processing/tests/: test_chapter_processing.py
stats/: admin.py  build_utils.py  charts.py  enums.py  forms.py  models.py  queries.py  serializers.py  urls.py  views.py
stats/charts/: __init__.py  characters.py  classes.py  config.py  gallery.py  locations.py  magic.py  reftype_types.py  reftypes.py  skills.py  word_counts.py
stats/migrations/: 0001_initial.py  0002_rename_levelingtokens_levelingtoken_chapter_text.py  0002_textref_color.py  0003_alter_reftype_name_reftype_unique_name_and_type.py  0004_character.py  0005_alter_character_species_alter_character_status.py  0006_alter_character_first_ref_uri_and_more.py  0007_alter_alias_options_alter_book_title_and_more.py  0008_remove_character_first_ref_uri_and_more.py  0009_alter_character_species_alter_character_status.py  0010_chapter_authors_note_word_count_and_more.py  0011_textref_key.py  0012_remove_textref_key_textref_key.py  0013_alter_alias_name_alter_color_rgb.py  0014_alter_reftype_type.py  0015_alter_chapter_word_count.py  0016_chapterline_remove_textref_key_and_more.py  0017_remove_textref_key_textref_key.py  0018_alter_chapter_options_alter_textref_options_and_more.py  0019_spell_skill_location_item.py  0022_alter_reftype_type.py  (+39 more)
(+125 files in other folders)
