[tool.poetry]
name = "innverse-stats"
version = "0.1.0"
description = "Django backend for innverse-stats app"
authors = ["Cameron Blankenbuehler <cameron.blankenbuehler@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "innverse"}]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
certifi = "2023.07.22"
charset-normalizer = "^3.2.0"
django = "^5.0.3"
django-browser-reload = "^1.11.0"
django-debug-toolbar = "^4.3.0"
django-htmx = "^1.17.2"
django-tables2 = "^2.6.0"
django-tailwind = "^3.5.0"
djangorestframework = "^3.14.0"
fake-useragent = "^1.1.3"
gunicorn = "^22.0.0"
idna = "^3.4"
kaleido = "0.2.1"
pandas = "^2.0.3"
pandas-stubs = "^2.1.4.231218"
plotly = "^5.14.1"
psycopg2 = "^2.9.9"
pyarrow = "^15.0.0"
pygobject = "^3.44.1"
pymemcache = "^4.0.0"
pysocks = "^1.7.1"
python = "^3.10"
python-dotenv = "^1.0.0"
regex = "^2023.12.25"
requests = "^2.28.2"
scipy = "^1.12.0"
soupsieve = "^2.4.1"
stem = "^1.8.1"
tablib = "^3.5.0"
urllib3 = "^1.26.18"
uvicorn = "^0.26.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar-template-profiler = "^2.1.0"
django-pattern-library = "^1.0.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.7"}
ipdb = "0.13.13"
ipython = "^8.14.0"
mypy = "^1.7.1"
pre-commit = "^3.3.3"
pyflame = "^0.3.1"
pylint = "^2.17.3"
pylint-django = "^2.5.3"
pylsp-mypy = "^0.6.8"
statsmodels = "^0.14.0"
types-regex = "^2023.12.25.20240311"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.5"}

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.mypy]
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Ignore charts mypy errors because Plotly doesn't currently support typing
# Though there is an existing issue see (https://github.com/plotly/plotly.py/issues/1103)
module = [
  'stats.charts.*',
]
ignore_missing_imports = true
ignore_errors = true

[tool.django-stubs]
django_settings_module = "innverse.settings"
strict_settings = false

[tool.ipdb]
context=5

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
