[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.mypy]
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Ignore charts mypy errors because Plotly doesn't currently support typing
# Though there is an existing issue see (https://github.com/plotly/plotly.py/issues/1103)
module = [
  'stats.charts.*',
]
ignore_missing_imports = true
ignore_errors = true

[tool.django-stubs]
django_settings_module = "innverse.settings"
strict_settings = false

[tool.ipdb]
context=5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "innverse.settings"
filterwarnings = [
    "ignore::UserWarning",
]
testpaths = [
  "innverse",
  "processing",
  "stats",
  "stats/wikibot/tests",
]


[project]
name = "innverse-stats"
version = "0.1.0"
description = "Analytics app for The Wandering Inn"
readme = "README.md"
authors = [
    {name = "Cameron Blankenbuehler", email = "cameron.blankenbuehler@protonmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.12.2",
    "certifi<2025.0.0,>=2024.07.04",
    "charset-normalizer<4.0.0,>=3.2.0",
    "django<6.0.0,>=5.0.3",
    "django-browser-reload<2.0.0,>=1.11.0",
    "django-debug-toolbar<5.0.0,>=4.3.0",
    "django-htmx<2.0.0,>=1.17.2",
    "django-tables2<3.0.0,>=2.6.0",
    "django-tailwind<4.0.0,>=3.5.0",
    "djangorestframework<4.0.0,>=3.14.0",
    "fake-useragent<2.0.0,>=1.1.3",
    "gunicorn<24.0.0,>=23.0.0",
    "idna<4.0,>=3.4",
    "kaleido==0.2.1",
    "pandas<3.0.0,>=2.0.3",
    "pandas-stubs<3.0.0.0,>=2.1.4.231218",
    "plotly<6.0.0,>=5.14.1",
    "psycopg2<3.0.0,>=2.9.9",
    #"pyarrow<16.0.0,>=15.0.0",
    "pygobject<4.0.0,>=3.44.1",
    "pymemcache<5.0.0,>=4.0.0",
    "pysocks<2.0.0,>=1.7.1",
    "python-dotenv<2.0.0,>=1.0.0",
    "regex<2024.0.0,>=2023.12.25",
    "requests<3.0.0,>=2.32.3",
    "scipy<2.0.0,>=1.12.0",
    "soupsieve<3.0.0,>=2.4.1",
    "stem<2.0.0,>=1.8.1",
    "tablib<4.0.0,>=3.5.0",
    "urllib3<2.0.0,>=1.26.18",
    "uvicorn<1.0.0,>=0.26.0",
    "wikitextparser<1.0.0,>=0.55.13",
    "pip<25.0.0,>=24.1.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar-template-profiler<3.0.0,>=2.1.0",
    "django-pattern-library<2.0.0,>=1.0.0",
    "django-stubs[compatible-mypy]<5.0.0,>=4.2.7",
    "ipdb==0.13.13",
    "ipython<9.0.0,>=8.14.0",
    "mypy<2.0.0,>=1.7.1",
    "pre-commit<4.0.0,>=3.3.3",
    "pyflame<1.0.0,>=0.3.1",
    "pylint<3.0.0,>=2.17.3",
    "pylint-django<3.0.0,>=2.5.3",
    "pylsp-mypy<1.0.0,>=0.6.8",
    "statsmodels<1.0.0,>=0.14.0",
    "types-regex<2024.0.0.0,>=2023.12.25.20240311",
    "djangorestframework-stubs[compatible-mypy]<4.0.0,>=3.14.5",
    "pywikibot<10.0.0,>=9.1.3",
    "pytest<9.0.0,>=8.2.2",
    "pytest-django<5.0.0,>=4.8.0",
    "djlint<2.0.0,>=1.35.2",
]
